Transicion entre jpa a jdbc