@@ -1,26 +1,18 @@
 package com.ufide.ProyectLenguajesBD.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.ResponseBody;
-import com.ufide.ProyectLenguajesBD.service.PersonalMedicoService;
 import com.ufide.ProyectLenguajesBD.entity.Especialidad;
 import com.ufide.ProyectLenguajesBD.entity.MedicoEspecialidad;
 import com.ufide.ProyectLenguajesBD.entity.PersonalMedico;
 import com.ufide.ProyectLenguajesBD.entity.Usuario;
-import com.ufide.ProyectLenguajesBD.repository.EspecialidadRepository;
-import com.ufide.ProyectLenguajesBD.repository.MedicoEspecialidadRepository;
-import com.ufide.ProyectLenguajesBD.repository.UsuarioRepository;
+import com.ufide.ProyectLenguajesBD.service.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.*;
+
 import java.util.List;
 import java.util.stream.Collectors;
-import org.springframework.transaction.annotation.Transactional;
 
 @Controller
 public class MedicosController {
@@ -29,38 +21,55 @@ public class MedicosController {
     private PersonalMedicoService personalMedicoService;
 
     @Autowired
-    private UsuarioRepository usuarioRepository;
+    private UsuarioService usuarioService;
 
     @Autowired
-    private EspecialidadRepository especialidadRepository;
+    private EspecialidadService especialidadService;
 
     @Autowired
-    private MedicoEspecialidadRepository medicoEspecialidadRepository;
+    private MedicoEspecialidadService medicoEspecialidadService;
 
     @GetMapping({"/medicos", "/medicos.html"})
     public String verMedicos(Model model) {
         model.addAttribute("medicos", personalMedicoService.obtenerTodos());
-        model.addAttribute("usuarios", usuarioRepository.findAll());
-        model.addAttribute("especialidades", especialidadRepository.findAll());
+        model.addAttribute("usuarios", usuarioService.obtenerTodos());
+        model.addAttribute("especialidades", especialidadService.obtenerTodos());
         return "medicos";
     }
 
     @GetMapping("/api/medicos")
     @ResponseBody
     public List<MedicoResponse> listarApi() {
-        return personalMedicoService.obtenerTodos().stream().map(this::convertir).collect(Collectors.toList());
+        return personalMedicoService.obtenerTodos().stream()
+                .map(this::convertir)
+                .collect(Collectors.toList());
     }
 
     @PostMapping("/api/medicos")
     @ResponseBody
     @Transactional
     public MedicoResponse crearApi(@RequestBody MedicoRequest request) {
-        Usuario usuario = usuarioRepository.findById(request.usuarioId()).orElseThrow();
-        Especialidad especialidad = especialidadRepository.findById(request.especialidadId()).orElseThrow();
-        PersonalMedico medico = new PersonalMedico(usuario, request.nombre(), request.apellido(), request.segApellido(),
-                request.codigoMedico(), request.correoElectronico(), request.telefono(), request.estado());
+        Usuario usuario = usuarioService.obtenerPorId(request.usuarioId())
+                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
+        Especialidad especialidad = especialidadService.obtenerPorId(request.especialidadId())
+                .orElseThrow(() -> new IllegalArgumentException("Especialidad no encontrada"));
+
+        PersonalMedico medico = new PersonalMedico(
+                usuario,
+                request.nombre(),
+                request.apellido(),
+                request.segApellido(),
+                request.codigoMedico(),
+                request.correoElectronico(),
+                request.telefono(),
+                request.estado()
+        );
         PersonalMedico guardado = personalMedicoService.guardar(medico);
-        medicoEspecialidadRepository.save(new MedicoEspecialidad(guardado, especialidad));
+
+        // Asociar especialidad
+        MedicoEspecialidad relacion = new MedicoEspecialidad(guardado, especialidad);
+        medicoEspecialidadService.guardar(relacion);
+
         return convertir(guardado);
     }
 
@@ -68,19 +77,34 @@ public class MedicosController {
     @ResponseBody
     @Transactional
     public MedicoResponse actualizarApi(@PathVariable Integer id, @RequestBody MedicoRequest request) {
-        Usuario usuario = usuarioRepository.findById(request.usuarioId()).orElseThrow();
-        Especialidad especialidad = especialidadRepository.findById(request.especialidadId()).orElseThrow();
-        PersonalMedico medico = new PersonalMedico(null, request.nombre(), request.apellido(), request.segApellido(),
-                request.codigoMedico(), request.correoElectronico(), request.telefono(), request.estado());
-        PersonalMedico actualizado = personalMedicoService.actualizar(id, medico);
-        if (actualizado == null) {
-            throw new IllegalArgumentException("Médico no encontrado");
+        Usuario usuario = usuarioService.obtenerPorId(request.usuarioId())
+                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
+        Especialidad especialidad = especialidadService.obtenerPorId(request.especialidadId())
+                .orElseThrow(() -> new IllegalArgumentException("Especialidad no encontrada"));
+
+        PersonalMedico medico = personalMedicoService.obtenerPorId(id)
+                .orElseThrow(() -> new IllegalArgumentException("Médico no encontrado"));
+        medico.setUsuario(usuario);
+        medico.setNombre(request.nombre());
+        medico.setApellido(request.apellido());
+        medico.setSegApellido(request.segApellido());
+        medico.setCodigoMedico(request.codigoMedico());
+        medico.setCorreoElectronico(request.correoElectronico());
+        medico.setTelefono(request.telefono());
+        medico.setEstado(request.estado());
+
+        PersonalMedico actualizado = personalMedicoService.guardar(medico);
+
+        // Actualizar especialidad: eliminar todas las relaciones y crear la nueva
+        List<MedicoEspecialidad> relacionesExistentes = medicoEspecialidadService.obtenerTodos().stream()
+                .filter(rel -> rel.getPersonalMedico().getPkPersonalMedico().equals(id))
+                .collect(Collectors.toList());
+        for (MedicoEspecialidad rel : relacionesExistentes) {
+            medicoEspecialidadService.eliminar(rel.getPkMedicoEspecialidad());
         }
-        actualizado.setUsuario(usuario);
-        personalMedicoService.guardar(actualizado);
-        medicoEspecialidadRepository.deleteAll(medicoEspecialidadRepository.findAll().stream()
-            .filter(relacion -> relacion.getPersonalMedico().getPkPersonalMedico().equals(id)).toList());
-        medicoEspecialidadRepository.save(new MedicoEspecialidad(actualizado, especialidad));
+        MedicoEspecialidad nuevaRel = new MedicoEspecialidad(actualizado, especialidad);
+        medicoEspecialidadService.guardar(nuevaRel);
+
         return convertir(actualizado);
     }
 
@@ -88,24 +112,46 @@ public class MedicosController {
     @ResponseBody
     @Transactional
     public void eliminarApi(@PathVariable Integer id) {
-        medicoEspecialidadRepository.deleteAll(medicoEspecialidadRepository.findAll().stream()
-                .filter(relacion -> relacion.getPersonalMedico().getPkPersonalMedico().equals(id)).toList());
+        // Eliminar relaciones
+        List<MedicoEspecialidad> relaciones = medicoEspecialidadService.obtenerTodos().stream()
+                .filter(rel -> rel.getPersonalMedico().getPkPersonalMedico().equals(id))
+                .collect(Collectors.toList());
+        for (MedicoEspecialidad rel : relaciones) {
+            medicoEspecialidadService.eliminar(rel.getPkMedicoEspecialidad());
+        }
         personalMedicoService.eliminar(id);
     }
 
+    // --- Conversiones y DTOs ---
     private MedicoResponse convertir(PersonalMedico medico) {
-        String especialidad = medico.getMedicoEspecialidades() == null ? "" : medico.getMedicoEspecialidades().stream()
-            .map(relacion -> relacion.getEspecialidad().getNombre()).distinct().collect(Collectors.joining(", "));
-        Integer especialidadId = medico.getMedicoEspecialidades() == null ? null : medico.getMedicoEspecialidades().stream()
-            .map(relacion -> relacion.getEspecialidad().getPkEspecialidad()).findFirst().orElse(null);
-        return new MedicoResponse(medico.getPkPersonalMedico(), medico.getUsuario().getPkUsuario(), medico.getCodigoMedico(),
-            especialidadId, medico.getNombre(), medico.getApellido(), medico.getTelefono(),
-            medico.getCorreoElectronico(), medico.getEstado(), especialidad);
+        String especialidades = medico.getMedicoEspecialidades() != null
+                ? medico.getMedicoEspecialidades().stream()
+                .map(rel -> rel.getEspecialidad().getNombre())
+                .distinct()
+                .collect(Collectors.joining(", "))
+                : "";
+        Integer especialidadId = medico.getMedicoEspecialidades() != null && !medico.getMedicoEspecialidades().isEmpty()
+                ? medico.getMedicoEspecialidades().get(0).getEspecialidad().getPkEspecialidad()
+                : null;
+        return new MedicoResponse(
+                medico.getPkPersonalMedico(),
+                medico.getUsuario().getPkUsuario(),
+                medico.getCodigoMedico(),
+                especialidadId,
+                medico.getNombre(),
+                medico.getApellido(),
+                medico.getTelefono(),
+                medico.getCorreoElectronico(),
+                medico.getEstado(),
+                especialidades
+        );
     }
 
     public record MedicoRequest(Integer usuarioId, Integer especialidadId, String nombre, String apellido,
-            String segApellido, String codigoMedico, String correoElectronico, String telefono, String estado) {}
+                                String segApellido, String codigoMedico, String correoElectronico,
+                                String telefono, String estado) {}
 
-        public record MedicoResponse(Integer id, Integer usuarioId, String codigoMedico, Integer especialidadId,
-            String nombre, String apellido, String telefono, String correoElectronico, String estado, String especialidad) {}
+    public record MedicoResponse(Integer id, Integer usuarioId, String codigoMedico, Integer especialidadId,
+                                 String nombre, String apellido, String telefono,
+                                 String correoElectronico, String estado, String especialidad) {}
 }
